--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,17 @@ services:
     tty: true
     depends_on:
       - injector
+      - elk
+    links:
+      - elk
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "udp://172.18.0.2:5044"
+
+  elk:
+    image: sebp/elk
+    ports:
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
