--- a/include/TO_config.json
+++ b/include/TO_config.json
@@ -3,7 +3,10 @@
   "sendPort": 9202,
   "receiveAddress": "0.0.0.0",
   "receivePort": 7000,
-  "distanceRadius": 10000,
-  "longitude": 476947023,
-  "latitude": 65357796
+  "northeast":
+    {"latitude":48625083,
+    "longitude":2244136},
+  "southwest":
+    {"latitude":48624128,
+    "longitude":2243457}
 }
