logger : add a simple logger
Catch the method from detection_interface
"write_to_log", and share it as "write"
into the "logger" namespace.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ include_directories(${CMAKE_SOURCE_DIR}/rapidjson
 set(CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR}/libtorch)
 find_package(Torch REQUIRED)
 
-add_executable(exchange to/exchange.cpp)
+add_executable(exchange
+        to/exchange.cpp
+        to/logger.cpp)
 
 target_link_libraries(exchange "${TORCH_LIBRARIES}" stdc++fs)
 
