--- a/to/CMakeLists.txt
+++ b/to/CMakeLists.txt
@@ -6,9 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(exchange)
 
 add_subdirectory(mapper)
-add_subdirectory(optimizer)
 
-add_executable(${PROJECT_NAME} exchange.cpp)
+add_executable(${PROJECT_NAME} exchange.cpp logger.cpp logger.h)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
@@ -16,5 +15,4 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 target_link_libraries(${PROJECT_NAME}
                       "${TORCH_LIBRARIES}"
                       stdc++fs
-                      optimizer
                       mapper)
