--- a/to/CMakeLists.txt
+++ b/to/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(exchange)
 
 add_subdirectory(mapper)
+add_subdirectory(optimizer)
 
 add_executable(${PROJECT_NAME} exchange.cpp logger.cpp logger.h)
 
@@ -15,4 +16,5 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 target_link_libraries(${PROJECT_NAME}
                       "${TORCH_LIBRARIES}"
                       stdc++fs
+                      optimizer
                       mapper)
