--- a/to/connectors/CMakeLists.txt
+++ b/to/connectors/CMakeLists.txt
@@ -15,16 +15,16 @@ set(LIB_H
         include/network_interface.h)
 
 
-add_library(${PROJECT_NAME} STATIC ${LIB_SRC} ${LIB_H})
+#add_library(${PROJECT_NAME} SHARED ${LIB_SRC} ${LIB_H})
 
-target_link_libraries(${PROJECT_NAME}
-                      models
-                      logger)
+target_include_directories(includes INTERFACE include)
 
-set_target_properties(${PROJECT_NAME} PROPERTIES
-        VERSION ${PROJECT_VERSION}
-        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-
-target_include_directories(${PROJECT_NAME}
-        PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+#target_link_libraries(${PROJECT_NAME} includes)
+#
+#set_target_properties(${PROJECT_NAME} PROPERTIES
+#        VERSION ${PROJECT_VERSION}
+#        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+#
+#target_include_directories(${PROJECT_NAME}
+#        PUBLIC
+#        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
