--- a/to/controlers/CMakeLists.txt
+++ b/to/controlers/CMakeLists.txt
@@ -17,13 +17,13 @@ set(LIB_H
         include/nearest_neighbour.h)
 
 
-add_library(${PROJECT_NAME} STATIC ${LIB_SRC} ${LIB_H})
+add_library(${PROJECT_NAME} SHARED ${LIB_SRC} ${LIB_H})
+
+target_include_directories(includes INTERFACE include)
 
 target_link_libraries(${PROJECT_NAME}
-                      "${TORCH_LIBRARIES}"
-                      models
-                      mapper
-                      logger)
+                        "${TORCH_LIBRARIES}"
+                        includes)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
         VERSION ${PROJECT_VERSION}
