--- a/to/logger/CMakeLists.txt
+++ b/to/logger/CMakeLists.txt
@@ -13,7 +13,11 @@ set(LIB_H
         include/logger.h)
 
 
-add_library(${PROJECT_NAME} STATIC ${LIB_SRC} ${LIB_H})
+add_library(${PROJECT_NAME} SHARED ${LIB_SRC} ${LIB_H})
+
+target_include_directories(includes INTERFACE include)
+
+target_link_libraries(${PROJECT_NAME} includes)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
         VERSION ${PROJECT_VERSION}
