Manage to make it work

--- a/to/CMakeLists.txt
+++ b/to/CMakeLists.txt
@@ -32,3 +32,5 @@ target_link_libraries(${PROJECT_NAME}
                         mapper
                         logger
                         includes)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
