[Network] Make it work

--- a/to/CMakeLists.txt
+++ b/to/CMakeLists.txt
@@ -20,8 +20,8 @@ add_executable(${PROJECT_NAME} exchange.cpp
         models/unsubscription_response.cpp
         models/road_user.cpp
         models/database.cpp
-        connectors/network_interface.cpp
         connectors/detection_interface.cpp
+        connectors/network_interface.cpp
         optimizer/optimizer_engine.cpp
         logger/logger.cpp) #cmake is a stupid shit
 
@@ -32,6 +32,7 @@ target_link_libraries(${PROJECT_NAME}
                         optimizer
                         mapper
                         logger
+                        connectors
                         includes)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
