Change scope size

--- a/include/TO_config.json
+++ b/include/TO_config.json
@@ -3,10 +3,12 @@
   "sendPort": 9202,
   "receiveAddress": "0.0.0.0",
   "receivePort": 7000,
-  "northeast":
-    {"latitude":486250830,
-    "longitude":22441360},
-  "southwest":
-    {"latitude":486241289,
-    "longitude":22434579}
+  "northeast": {
+    "latitude":486256070,
+    "longitude":22455350
+  },
+  "southwest": {
+    "latitude":486232710,
+    "longitude":22425240
+  }
 }
