Stash: Resolving smahing stack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ project(to)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_compile_options("-Wall")
+add_compile_options("-Werror")
+add_compile_options("-Wextra")
+add_compile_options("-O2")
 
 add_subdirectory(thirdparty)
 
